# Multi-env

./: Cargo.toml  README.md
examples/: .env.development  .env.production  common.yaml  development.yaml  production.yaml
examples/src/: main.rs
src/: lib.rs
src/handlers/: load.rs
src/models/: args.rs  mod.rs
