[package]
name = "multi-env"
version = "0.1.0"
authors = ["m1n67un <rkdalsrbs0@naver.com>"]
description = "An elegant banner library that enhances project launches with eye-catching terminal displays and helpful assistance."
license = "MIT OR Apache-2.0"
repository = "https://github.com/m1n67un/Multi-env"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
config = "0.14"
serde_yaml = "0.9"